[gd_scene load_steps=12 format=2]

[ext_resource path="res://Grafik/bluearrow.png" type="Texture" id=1]
[ext_resource path="res://Grafik/Indstillingerknap.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Login.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.219608, 0.403922, 0.752941, 1 )
draw_center = false

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.127285, 0.324393, 0.880676, 1 )

[node name="Login" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.745098, 0.827451, 0.968627, 1 )

[node name="Buttons" type="Node2D" parent="."]

[node name="Annuler" type="Button" parent="Buttons"]
margin_left = 29.0
margin_top = 21.0
margin_right = 841.0
margin_bottom = 827.0
rect_scale = Vector2( 0.1, 0.1 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 1 )

[node name="Indstillinger" type="Button" parent="Buttons"]
margin_left = 784.0
margin_top = 523.0
margin_right = 1050.0
margin_bottom = 761.0
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
icon = ExtResource( 2 )

[node name="FAQ" type="Button" parent="Buttons"]
margin_left = 871.0
margin_top = 531.0
margin_right = 1017.0
margin_bottom = 588.0
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "FAQ"

[node name="Save game" type="Button" parent="Buttons"]
margin_left = 245.0
margin_top = 232.0
margin_right = 427.0
margin_bottom = 384.0
text = "Save game"

[node name="Load game" type="Button" parent="Buttons"]
margin_left = 545.0
margin_top = 234.0
margin_right = 729.0
margin_bottom = 385.0
text = "load game"

[connection signal="pressed" from="Buttons/Annuler" to="." method="_on_Annuler_pressed"]
[connection signal="pressed" from="Buttons/Save game" to="." method="_on_Save_game_pressed"]
[connection signal="pressed" from="Buttons/Load game" to="." method="_on_Load_game_pressed"]
